# UnitTestingExercise

./: Employee.py  README.md  pytest.ini  requirements.txt  setup.cfg  test_employee.py
.github/workflows/: main.ymal  main.yml
company/: __init__.py
src/company/: Employee.py
tests/: test_employee.py
