[metadata]
name = company
description = employee testing
author = Ori Aviad
license_files = LICENSE
platforms = unix, linux, osx, win32, win64
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    company
install_requires =
    requests>=2
python_requires = >=3.7

zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0

[options.package_data]
company = py.typed
